--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,9 @@ board = nodemcuv2
 framework = arduino
 upload_port = /dev/ttyUSB1
 lib_ldf_mode = deep+
-lib_deps = 
-	bodmer/TFT_eSPI@^2.3.58
-	bblanchon/ArduinoJson@^6.17.2
+lib_deps = bodmer/TFT_eSPI@^2.3.58
 monitor_port = /dev/ttyUSB1
 monitor_speed = 115200
+
+[platformio]
+description = Generates a ESP8266/ST7789 QR code for OpenWRT Guest WiFi
